Bug 148776 - PDF Accessibility: checker windows scroll steps too small
Summary: PDF Accessibility: checker windows scroll steps too small
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2022-04-25 17:03 UTC by Olivier Hallot
Modified: 2023-05-02 06:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
just something to test with (39.87 KB, application/vnd.oasis.opendocument.text)
2023-03-06 10:48 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2022-04-25 17:03:54 UTC
On using the Accessibility checker (Tools - Accessibility check) in a Writer document,  the dialog list the issues found.

However on scrolling the list, the scroll is too slow, as when the scroll minimal step is too small. It forces to use the mouse roller too much.
Comment 1 Dieter 2022-05-09 06:18:49 UTC
I confirm it with

Version: 7.3.3.2 (x64) / LibreOffice Community
Build ID: d1d0ea68f081ee2800a922cac8f79445e4603348
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 2 Caolán McNamara 2023-03-06 10:48:51 UTC
Created attachment 185791 [details]
just something to test with
Comment 3 Commit Notification 2023-03-06 16:55:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a88c5840e022ca896ce26ce1dfde2db7fb7df29

tdf#148776 for scrolling set step size as height of a row

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-03-09 12:37:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/6169709cea1f72c55fadab27291dc878cb422ad1

tdf#148776 for scrolling set step size as height of a row

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Dieter 2023-05-02 06:09:35 UTC
VERIFIED with

Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Caolán, thanks for fixing it!