tdf#148776 for scrolling set step size as height of a row

similar to FontFeaturesDialog.

FWIW gtk's viewport implementation automatically overwrites the step
size to be 10% of the visible height (and page size of 90% of the
visible height)

Change-Id: If356724a47b0a10069f129bed4a40cfdee57bfa8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148138
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 4a88c5840e022ca896ce26ce1dfde2db7fb7df29)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148318
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>